tests/legacy/public/Public-6.mj


int main() {
    int x = 10;

    char c = x; // error: cannot convert from 'int' to 'char'

    return 0;
}